Try cached thread pool.